--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -9,7 +9,7 @@
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
     <h1 id="hometext" class="font-weight-bold">
-      Hello, I'm Viraj Ashar and over here you would able see my portfolio and Blog's.
+      Hello, I'm Viraj Ashar and over here you would able see my portfolio and Blog's🙌.
     </h1>
   </div>
 </div>
